# Flights

./: .gitignore  README.md  asset-manifest.json  cleaned_landmarks.csv  index.html
.github/workflows/: build_test_react.yml
backend/: .env  Cargo.toml  Dockerfile  Dockerrun.aws.json
backend/.ebextensions/: .config
backend/migrations/2021-11-24-000806_Air/: up.sql
backend/src/: airlines.rs  airports.rs  alliances.rs  cors.rs  countries.rs  db.rs  landmarks.rs  main.rs  models.rs  planes.rs  routes.rs  schema.rs  weather.rs
data/: AirlineAlliance.csv  CountryAlias_cleaned.csv  aiports_cleaned.csv  airports.csv  airports_cleaned.csv  alliances_cleaned.csv  cities_cleaned.csv  countries.csv  countries_cleaned.csv  country-code.csv  data-cleaning.ipynb  landmarks.csv  planes_cleaned.csv  routes.csv  routes_cleaned.csv  scraping.ipynb
data/.ipynb_checkpoints/: data-cleaning-checkpoint.ipynb
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Home.jsx  fetcher.js  index.js
static/css/: main.468f4dd0.chunk.css  main.468f4dd0.chunk.css.map
static/js/: 2.0ba1d761.chunk.js  2.0fdcc481.chunk.js  2.10bd1812.chunk.js  2.15a64773.chunk.js  2.162e86d9.chunk.js  2.25127ac2.chunk.js  2.28949b44.chunk.js  2.29020db5.chunk.js  2.361d6f48.chunk.js  2.43226a66.chunk.js  2.4532a5a0.chunk.js  2.5b6b3534.chunk.js  2.611b8b2f.chunk.js  2.71d9c21a.chunk.js  2.71d9c21a.chunk.js.map  2.721e3fa9.chunk.js  2.7954d674.chunk.js  2.803ad595.chunk.js  2.82fa414b.chunk.js  2.8d18e434.chunk.js  2.8fe82290.chunk.js  (+133 more)
(+13 files in other folders)
