[package]
name = "flights-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "1.4.4", features=["mysql", "numeric"]}
dotenv = "0.15.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
bigdecimal = { version = "0.1.2", features = ["serde"]}
schemars = "0.8.7"

rocket_okapi = { version = "0.8.0-rc.1", features = ["swagger", "rapidoc"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
